fixed layout issues after merging foxes

--- a/src/components/fox/fox.module.css
+++ b/src/components/fox/fox.module.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: 80vw;
+  width: 100vw;
   height: 100%;
 }
 
@@ -15,8 +15,9 @@
   border-top: 2px solid #f86624;
 }
 
-.img {
+.fox img {
   height: 100%;
+  width: 100%;
 }
 
 @media screen and (min-width: 700px) {
